[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70" # 错误处理
clap = { version = "4.2.1",features = ["derive"]} # 命令行解析
colored = "2.0.0" # 命令行多彩显示
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.17" # 处理mime类型
reqwest = { version = "0.11.16",features = ["json"] } # HTTP客户端
tokio = { version = "1.27.0", features = ["full"] } # 异步处理